# Cpp-GameEngine-Prototype

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  README.md  build.bat  build_engine.bat  build_game_package.bat  editor_all.txt  game.sln  imgui.ini
assets/: test.json
docs/: animation_system.md  animator_controller_editor.md  architecture.md  ecs_system.md  editor_ui.md  job_system.md  node_graph_framework.md  physics_stabilization_postmortem.md  physics_system.md  reflection_system.md  skinned_animation_postmortem.md  vulkan_renderer.md
docs/diagrams/: architecture.puml  ecs_structure.puml  frame_lifecycle.puml  raycast_picking.puml  vulkan_layer.puml
engine/: CMakeLists.txt
engine/builtin_shaders/: grid.frag  grid.vert  lit.frag  lit.vert  skinned.vert  skinned_lit.vert  unlit.frag  unlit.vert
engine/cmake/: EngineConfig.cmake
engine/editor/: main.cpp
engine/include/: ScriptAPI.hpp
engine/include/core/: Application.hpp  EngineAPI.hpp  JobSystem.hpp  Plugin.hpp  PluginManager.hpp
engine/include/ecs/: ComponentStorage.hpp  Entity.hpp  EntityCloner.hpp  EntityFactory.hpp  EntityHash.hpp  EntityManager.hpp  Registry.hpp  System.hpp  SystemManager.hpp
engine/include/ecs/components/: AnimationController.hpp  Animator.hpp  AudioListener.hpp  AudioSource.hpp  Camera.hpp  CinemachineComponent.hpp  Collider.hpp  EditorCamera.hpp  Grid.hpp  Hierarchy.hpp  IKSolver.hpp  LightComponent.hpp  Material.hpp  Mesh.hpp  Name.hpp  PhysgunScript.hpp  PlayerControllerComponent.hpp  PrimitiveType.hpp  Primitives.hpp  Renderable.hpp  RigidBody.hpp  Skeleton.hpp  Tilemap.hpp  Transform.hpp  UIComponents.hpp  inputComponent.hpp  pushconstants.hpp
engine/include/ecs/systems/: AnimationSystem.hpp  AudioSystem.hpp  CameraSystem.hpp  InputSystem.hpp  PhysicsSystem.hpp  PlayerControllerSystem.hpp  RenderSystem.hpp  TilemapSystem.hpp  UISystem.hpp
engine/include/ecs/uniforms/: instanceData.hpp  uniforms.hpp
engine/include/editor/: AssetBrowserRegistry.hpp  EditorModeState.hpp  EditorUI.hpp  EditorUIInternal.hpp  NodeGraphFramework.hpp
engine/include/meta/: ComponentReflection.hpp
engine/include/renderer/: ResourceManager.hpp  VulkanRenderer.hpp
engine/include/scenes/: ComponentSerializerRegistry.hpp  DefaultScene.hpp  JSONUtils.hpp  Scene.hpp  SceneManagement.hpp  SceneManager.hpp  SceneSerializer.hpp  TilesetAsset.hpp
engine/include/soa/: CameraSoA.hpp  MeshSoA.hpp  TransformSoA.hpp
engine/runtime/: main.cpp
engine/src/: VulkanRenderer.cpp  miniaudio.cpp
engine/src/core/: Application.cpp  Application.hpp  Buffer.hpp  FrameManager.cpp  FrameManager.hpp  JobSystem.cpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PluginManager.cpp  SwapchainManager.cpp  SwapchainManager.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandManager.cpp  VulkanCommandManager.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDescriptors.cpp  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameSync.cpp  VulkanFrameSync.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
engine/src/ecs/: EntityCloner.cpp  EntityFactory.cpp  Registry.cpp
engine/src/ecs/systems/: AudioSystem.cpp  PlayerControllerSystem.cpp  TilemapSystem.cpp  UISystem.cpp
engine/src/editor/: EditorUI.cpp  EditorUIComponentEditors.cpp  EditorUIGizmosAndPicking.cpp  EditorUIPanels.cpp  NodeGraphFramework.cpp
engine/src/meta/: ComponentReflection.cpp
engine/src/renderer/: Renderer.cpp  Renderer.hpp  ResourceManager.cpp
engine/src/scenes/: ComponentSerializerRegistry.cpp  JSONUtils.cpp  Scene.cpp  SceneManagement.cpp  SceneManager.cpp  SceneSerializer.cpp  TilesetAsset.cpp
engine/src/tools/: reflection_generator.cpp
game/: compile.bat  game.vcxproj  game.vcxproj.filters  imgui.ini
game/assets/scenes/: test_scene.json
game/assets/shaders/: grid.frag  grid.vert  unlit.frag  unlit.vert
game/include/ecs/: Component.hpp  ComponentBase.hpp  ComponentStorage.hpp  Entity.hpp  EntityManager.hpp  MeshManager.hpp  Registry.hpp  System.hpp  SystemManager.hpp
game/include/editor/: EditorUI.hpp
game/include/renderer/: VulkanRenderer.hpp
game/include/scenes/: Scene.hpp  SceneManager.hpp  TestScene.hpp
game/include/soa/: MeshSoA.hpp
game/src/: VulkanRenderer.cpp  main.cpp
plugins/: CMakeLists.txt
plugins/cinemachine/: CMakeLists.txt
plugins/cinemachine/include/: CinemachineComponent.hpp  CinemachineSystem.hpp
plugins/cinemachine/src/: CinemachinePlugin.cpp  CinemachineSystem.cpp
sandbox_game/: CMakeLists.txt  imgui.ini  project.settings
sandbox_game/assets/: Doughnut.glb  Physics.json
sandbox_game/assets/Meshes/Physics/: Ch36_nonPBR.fbx.import  firing rifle.fbx  firing rifle.fbx.import  hit reaction.fbx  reloading.fbx  rifle aiming idle.fbx  rifle jump.fbx  rifle run.fbx  run backwards.fbx  strafe (2).fbx  strafe left.fbx  strafe right.fbx  strafe.fbx  toss grenade.fbx  turn left.fbx  turning right 45 degrees.fbx  walking backwards.fbx  walking.fbx  walking.fbx.import
sandbox_game/assets/Textures/ayame/: fabric02_height.tif  leather02_height.tif  leather_height.tif
sandbox_game/assets/animations/: Ch36_nonPBR.anim  rifle aiming idle.anim  rifle run.anim  strafe left.anim  strafe right.anim  walking backwards.anim  walking.anim  walking_mixamo.com.anim
sandbox_game/assets/scenes/: Physics.json  test_scene.json  test_scene2.json
sandbox_game/assets/scenes/Physics/: Physics.json
sandbox_game/assets/tilesets/: NewTileset.tileset
sandbox_game/assets/tilesets/NewTileset/: .tile  Ch36_1001_Diffuse.tile  Ch36_1001_Glossiness.tile  Ch36_1001_Specular.tile
sandbox_game/scripts/: CMakeLists.txt  fbx_to_anim.py
sandbox_game/scripts/private/: PhysgunScript.cpp
sandbox_game/scripts/public/ecs/components/: PhysgunScript.hpp
sandbox_game/scripts/src/: PhysgunScript.cpp  generated_reflection.cpp
sandbox_game/src/: GameMetadataComponent.hpp  PlayerControllerSystem.cpp  PlayerControllerSystem.hpp  SandboxApp.cpp  SandboxApp.hpp  main.cpp
sandbox_game/src/scenes/: TestScene.cpp  TestScene.hpp
scratch/: run_temp.bat
(+39 files in other folders)
